[Mac] Fixed the content settings bubble

If the user clicks on a content settings icon when the bubble is already
opened, the bubble should close, not open another one

BUG=670621

Review-Url: https://codereview.chromium.org/2558443004
Cr-Commit-Position: refs/heads/master@{#436698}

Former-commit-id: cfa3d99e2d870f97146e200f59515a516afda52c